fix homepage css on mobile

--- a/static/css/media.css
+++ b/static/css/media.css
@@ -27,6 +27,10 @@
     top: 150px ;
     bottom: 30px ;
   }
+
+  .home-section div.center {
+    width: auto;
+  }
 }
 
 
